--- a/book.html
+++ b/book.html
@@ -67,6 +67,27 @@
             </div>
         </div>
     </section>
-
+    <section id="Romance">
+        <div class="book-container">
+            <div class="book">
+                <img src="The Forest of Enchantments.jpg" alt="Book 1">
+                <h3>The Duke and I</h3>
+                <a href="forest-of-enchantments.pdf" target="_blank">Read</a><br><br>
+                <a href="forest-of-enchantments.pdf" download="Forest-of-Enchantments.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="th palace of illusion.webp" alt="Book 1">
+                <h3>The Viscount Who Loved Me</h3>
+                <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
+                <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="turtle and the rabbit.webp" alt="Book 2">
+                <h3>An Offer from a Gentleman</h3>
+                <a href="turtle-and-rabbits-big-race.pdf" target="_blank">Read</a><br><br>
+                <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
