--- a/book.html
+++ b/book.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#Mythology">Mythology</a></li>
                 <li><a href="#Romance">Romance</a></li>
-                <li><a href="#Biography">Biography</a></li>
+                <li><a href="#Fiction">Fiction</a></li>
                 <li><a href="#Kids">Kids</a></li>
             </ul>
         </nav>
@@ -49,25 +49,53 @@
         <div class="book-container">
             <div class="book">
                 <img src="The Forest of Enchantments.jpg" alt="Book 1">
-                <h3>The Forest of Enchantments</h3>
+                <h3>Twisted Love</h3>
                 <a href="forest-of-enchantments.pdf" target="_blank">Read</a><br><br>
                 <a href="forest-of-enchantments.pdf" download="Forest-of-Enchantments.pdf"><button>Download Book</button></a>
             </div>
             <div class="book">
                 <img src="th palace of illusion.webp" alt="Book 1">
-                <h3>The Palace of Illusions</h3>
+                <h3>Twisted Games</h3>
                 <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
                 <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
             </div>
             <div class="book">
                 <img src="turtle and the rabbit.webp" alt="Book 2">
-                <h3>Turtle and the Rabbit</h3>
+                <h3>Twisted Hate</h3>
+                <a href="turtle-and-rabbits-big-race.pdf" target="_blank">Read</a><br><br>
+                <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="turtle and the rabbit.webp" alt="Book 2">
+                <h3>Twisted Lies</h3>
                 <a href="turtle-and-rabbits-big-race.pdf" target="_blank">Read</a><br><br>
                 <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
             </div>
         </div><br>
     </section>
     <section id="Romance">
+        <div class="book-container">
+            <div class="book">
+                <img src="The duke and I.webp" alt="Book 1">
+                <h3>The Duke and I</h3>
+                <a href="The Duke and I.pdf" target="_blank">Read</a><br><br>
+                <a href="The Duke and I.pdf" download="The Duke and I.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="the viscount who loved me.webp" alt="Book 1">
+                <h3>The Viscount Who Loved Me</h3>
+                <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
+                <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="an-offer-from-a-gentleman.webp" alt="Book 2">
+                <h3>An Offer from a Gentleman</h3>
+                <a href="An Offer from a Gentleman.pdf" target="_blank">Read</a><br><br>
+                <a href="An Offer from a Gentleman.pdf" download="An Offer from a Gentleman.pdf"><button>Download Book</button></a>
+            </div>
+        </div>
+    </section><br>
+    <section id="Fiction">
         <div class="book-container">
             <div class="book">
                 <img src="The duke and I.webp" alt="Book 1">
