--- a/book.html
+++ b/book.html
@@ -43,7 +43,7 @@
                 <a href="A_Fine_Balance.pdf" target="_blank">Read</a><br><br>
                 <a href="A_Fine_Balance.pdf" download="A Fine Balance.pdf"><button>Download Book</button></a>
             </div>
-        </div><br>
+        </div>
     </section>
         <section id="Mythology">
         <div class="book-container">
@@ -116,6 +116,6 @@
                 <a href="Twisted Lies.pdf" download="Twisted Lies.pdf"><button>Download Book</button></a>
             </div>
         </div>
-    </section>
+    </section><br>
 </body>
 </html>
