--- a/book.html
+++ b/book.html
@@ -59,12 +59,7 @@
                 <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
                 <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
             </div>
-            <div class="book">
-                <img src="turtle and the rabbit.webp" alt="Book 2">
-                <h3>Turtle and The Rabbit</h3>
-                <a href="turtle-and-rabbits-big-race.pdf" target="_blank">Read</a><br><br>
-                <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
-            </div>
+            
         </div><br>
     </section>
     <section id="Romance">
@@ -117,5 +112,27 @@
             </div>
         </div>
     </section><br>
+    <section id="Kids">
+        <div class="book-container">
+            <div class="book">
+                <img src="turtle and the rabbit.webp" alt="Book 2">
+                <h3>Turtle and The Rabbit</h3>
+                <a href="turtle-and-rabbits-big-race.pdf" target="_blank">Read</a><br><br>
+                <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="the viscount who loved me.webp" alt="Book 1">
+                <h3>Aladdin</h3>
+                <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
+                <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
+            </div>
+            <div class="book">
+                <img src="an-offer-from-a-gentleman.webp" alt="Book 2">
+                <h3>The lion King</h3>
+                <a href="An Offer from a Gentleman.pdf" target="_blank">Read</a><br><br>
+                <a href="An Offer from a Gentleman.pdf" download="An Offer from a Gentleman.pdf"><button>Download Book</button></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
