--- a/book.html
+++ b/book.html
@@ -73,8 +73,8 @@
             <div class="book">
                 <img src="the viscount who loved me.webp" alt="Book 1">
                 <h3>The Viscount Who Loved Me</h3>
-                <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
-                <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
+                <a href="The Viscount Who Loved Me.pdf" target="_blank">Read</a><br><br>
+                <a href="The Viscount Who Loved Me.pdf" download="The Viscount Who Loved Me.pdf"><button>Download Book</button></a>
             </div>
             <div class="book">
                 <img src="an-offer-from-a-gentleman.webp" alt="Book 2">
@@ -121,16 +121,16 @@
                 <a href="turtle-and-rabbits-big-race.pdf" download="Turtle and The Rabbit Race.pdf"><button>Download Book</button></a>
             </div>
             <div class="book">
-                <img src="the viscount who loved me.webp" alt="Book 1">
+                <img src="aladdin.webp" alt="Book 1">
                 <h3>Aladdin</h3>
-                <a href="the-palace-of-illusions.pdf" target="_blank">Read</a><br><br>
-                <a href="the-palace-of-illusions.pdf" download="The Palace of Illusions.pdf"><button>Download Book</button></a>
+                <a href="Aladdin.pdf" target="_blank">Read</a><br><br>
+                <a href="Aladdin.pdf" download="Aladdin.pdf"><button>Download Book</button></a>
             </div>
             <div class="book">
-                <img src="an-offer-from-a-gentleman.webp" alt="Book 2">
-                <h3>The lion King</h3>
-                <a href="An Offer from a Gentleman.pdf" target="_blank">Read</a><br><br>
-                <a href="An Offer from a Gentleman.pdf" download="An Offer from a Gentleman.pdf"><button>Download Book</button></a>
+                <img src="the lion king.webp" alt="Book 2">
+                <h3>The Lion King</h3>
+                <a href="The Lion King.pdf" target="_blank">Read</a><br><br>
+                <a href="The Lion King.pdf" download="The Lion King.pdf"><button>Download Book</button></a>
             </div>
         </div>
     </section>
