--- a/signup.html
+++ b/signup.html
@@ -64,16 +64,11 @@
             let email = document.getElementById("email").value;
             let password = document.getElementById("password").value;
 
-           fetch("AKfycbzMBoGiLpBG_3K6BnEarouz6DLq6YR8tUoSa_S7Nzu55CNHgXfIOur_QqEwtkcQ-h7n", { 
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ name: name, email: email, password: password })
-            })
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("signupForm").reset();
-            })
-            .catch(error => alert("Error: " + error));
+            localStorage.setItem("UserName", name);
+            localStorage.setItem("UserEmail", email);
+            localStorage.setItem("UserPassword", password);
+
+            window.location.href = "signin.html";
         });
     </script>
 
